--- a/src/scss/blocks/_list.scss
+++ b/src/scss/blocks/_list.scss
@@ -5,7 +5,9 @@
   }
 
   &__link {
+    color: var(--color-blue);
     @include hover {
+      color: var(--color-ligth);
       box-shadow: var(--box-shadow);
     }
   }
