--- a/src/scss/blocks/_menu.scss
+++ b/src/scss/blocks/_menu.scss
@@ -5,6 +5,10 @@
   justify-content: space-between;
   column-gap: rem(30);
   &__search {
+    color: var(--color-ligth);
+    @include hover {
+      color: var(--color-blue-ligth);
+    }
   }
 
   &__button {
