--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -6,6 +6,10 @@
   font-style: normal;
   font-display: swap;
 }
+body {
+  color: var(--color-ligth);
+}
+
 main {
   height: 100vh;
   flex-grow: 1;
@@ -398,7 +402,185 @@ svg * {
   -moz-column-gap: 1.875rem;
        column-gap: 1.875rem;
 }
-.main {
+.menu__search {
+  color: var(--color-ligth);
+}
+@media (any-hover: hover) {
+  .menu__search:hover {
+    color: var(--color-blue-ligth);
+  }
+}
+@media (any-hover: none) {
+  .menu__search:active {
+    color: var(--color-blue-ligth);
+  }
+}
+.effect__line1 {
+  position: absolute;
+  background-color: var(--color-ligth);
+  top: 2%;
+  left: 90.5%;
+  z-index: 100;
+  width: 0.3125rem;
+  height: 0.3125rem;
+  border-radius: 50%;
+  animation: blink 2s infinite; /* Анімація, яка триває 1 секунду і повторюється нескінченно */
+}
+
+.effect__line2 {
+  position: absolute;
+  background-color: var(--color-blue-ligth);
+  top: 1%;
+  left: 76.7%;
+  z-index: 100;
+  width: 0.3125rem;
+  height: 0.3125rem;
+  border-radius: 50%;
+  animation: blink 2s infinite; /* Анімація, яка триває 1 секунду і повторюється нескінченно */
+}
+
+.effect__line3 {
+  position: absolute;
+  background-color: var(--color-blue-ligth);
+  top: 5%;
+  left: 76.8%;
+  z-index: 100;
+  width: 0.3125rem;
+  height: 0.3125rem;
+  border-radius: 50%;
+  animation: blink 2s infinite; /* Анімація, яка триває 1 секунду і повторюється нескінченно */
+}
+
+.effect__line4 {
+  position: absolute;
+  background-color: var(--color-blue-ligth);
+  top: 8.8%;
+  left: 76.7%;
+  z-index: 100;
+  width: 0.25rem;
+  height: 0.25rem;
+  border-radius: 50%;
+  animation: blink 2s infinite; /* Анімація, яка триває 1 секунду і повторюється нескінченно */
+}
+
+.effect__line5 {
+  position: absolute;
+  background-color: var(--color-ligth);
+  top: 19.6%;
+  left: 70.7%;
+  z-index: 100;
+  width: 1.625rem;
+  height: 0.125rem;
+  transform: rotate(145deg);
+  border-radius: 2%;
+  animation: blink 3s infinite; /* Анімація, яка триває 1 секунду і повторюється нескінченно */
+}
+
+.effect__line6 {
+  position: absolute;
+  background-color: var(--color-blue-ligth);
+  top: 15%;
+  left: 50.7%;
+  z-index: 100;
+  width: 0.25rem;
+  height: 0.25rem;
+  border-radius: 50%;
+  animation: blink 2s infinite; /* Анімація, яка триває 1 секунду і повторюється нескінченно */
+}
+
+.effect__line7 {
+  position: absolute;
+  background-color: var(--color-blue-ligth);
+  top: 11%;
+  left: 30.7%;
+  z-index: 100;
+  width: 0.25rem;
+  height: 0.25rem;
+  border-radius: 50%;
+  animation: blink 2s infinite; /* Анімація, яка триває 1 секунду і повторюється нескінченно */
+}
+
+.effect__line8 {
+  position: absolute;
+  background-color: var(--color-blue-ligth);
+  top: 5%;
+  left: 20.7%;
+  z-index: 100;
+  width: 0.25rem;
+  height: 0.25rem;
+  border-radius: 50%;
+  animation: blink 2s infinite; /* Анімація, яка триває 1 секунду і повторюється нескінченно */
+}
+
+.effect__line9 {
+  position: absolute;
+  background-color: var(--color-blue-ligth);
+  top: 10%;
+  left: 10.7%;
+  z-index: 100;
+  width: 0.25rem;
+  height: 0.25rem;
+  border-radius: 50%;
+  animation: blink 2s infinite; /* Анімація, яка триває 1 секунду і повторюється нескінченно */
+}
+
+.effect__line10 {
+  position: absolute;
+  background-color: var(--color-blue-ligth);
+  top: 20%;
+  left: 90.7%;
+  z-index: 100;
+  width: 0.25rem;
+  height: 0.25rem;
+  border-radius: 50%;
+  animation: blink 2s infinite; /* Анімація, яка триває 1 секунду і повторюється нескінченно */
+}
+
+.effect__line11 {
+  position: absolute;
+  background-color: var(--color-ligth);
+  top: 22%;
+  left: 91.7%;
+  z-index: 100;
+  width: 0.25rem;
+  height: 0.25rem;
+  border-radius: 50%;
+  animation: blink 1s infinite; /* Анімація, яка триває 1 секунду і повторюється нескінченно */
+}
+
+.effect__line12 {
+  position: absolute;
+  background-color: var(--color-blue-ligth);
+  top: 33%;
+  left: 88.7%;
+  z-index: 100;
+  width: 0.25rem;
+  height: 0.25rem;
+  border-radius: 50%;
+  animation: blink 6s infinite; /* Анімація, яка триває 1 секунду і повторюється нескінченно */
+}
+
+.effect__line13 {
+  position: absolute;
+  background-color: var(--color-blue-ligth);
+  top: 50%;
+  left: 89.7%;
+  z-index: 100;
+  width: 0.25rem;
+  height: 0.25rem;
+  border-radius: 50%;
+  animation: blink 2s infinite; /* Анімація, яка триває 1 секунду і повторюється нескінченно */
+}
+
+@keyframes blink {
+  0%, 100% {
+    opacity: 0.7; /* Повна видимість */
+  }
+  50% {
+    opacity: 0; /* Повна прозорість */
+  }
+}
+.background {
   position: relative;
   min-height: 100vh; /* Щоб фон займав всю висоту екрану */
   background: linear-gradient(180deg, rgba(1, 22, 39, 0), rgb(1, 22, 39) 300.645%, rgb(1, 22, 39) 70%), url("/src/img/main/background.jpeg") no-repeat center center/cover fixed;
@@ -498,13 +680,18 @@ svg * {
 .list {
   padding-top: 2.5rem;
 }
+.list__link {
+  color: var(--color-blue);
+}
 @media (any-hover: hover) {
   .list__link:hover {
+    color: var(--color-ligth);
     box-shadow: var(--box-shadow);
   }
 }
 @media (any-hover: none) {
   .list__link:active {
+    color: var(--color-ligth);
     box-shadow: var(--box-shadow);
   }
 }
