--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,5 +10,6 @@
 @use "./blocks/button";
 @use "./blocks/menu";
 //main
+@use "./blocks/effect-line";
 @use "./blocks/title";
 @use "./blocks/list";
