--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,7 +1,10 @@
 @use "helpers" as *;
 
 :root {
+  --color-back: rgb(1, 22, 40);
   --color-ligth: #ffffff;
+  --nice-blue: #70879b;
+  --color-blue-black: #02223b;
   --color-blue: #41ead4;
   --color-blue-ligth: #00c9e0;
   ///////////////
