--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,3 +13,16 @@
 @use "./blocks/effect-line";
 @use "./blocks/title";
 @use "./blocks/list";
+
+@use "./blocks/trip";
+@use "./blocks/about";
+@use "./blocks/chill";
+@use "./blocks/pick";
+
+@use "./blocks/about-us";
+@use "./blocks/people";
+@use "./blocks/card";
+//footer
+
+@use "./blocks/footer";
+@use "./blocks/contats";
